@@ -8,7 +8,7 @@ Bugs and the TIFF Mailing List
 <FONT FACE="Arial, Helvetica, Sans">
 <H1>
 <IMG SRC=images/cover.jpg WIDTH=110 HEIGHT=110 ALIGN=left BORDER=1 HSPACE=6>
-Bugs and the TIFF Mailing List
+Bugs, Bugzilla, and the TIFF Mailing List
 </H1>
 
 <P>
@@ -16,9 +16,18 @@ This software is free.  Please let us know when you find a problem or
 fix a bug.
 
 <P>
-A mailing list for users of this software is located at olympiakos.com
-If you want to join this mailing list or have a list-related request
-such as getting your name removed from it, send a request to
+Thanks to <A HREF=http://www.remotesensing.org/>remotesensing.org</a>, libtiff now uses bugzilla to track bugs. 
+<P>
+If you think you've discovered a bug, please first check to see if it is already known by looking at the list of already reported bugs.  You can do so by visiting the buglist at <A HREF=http://bugzilla.remotesensing.org/buglist.cgi?product=libtiff>http://bugzilla.remotesensing.org/enter_bug.cgi?product=libtiff</A>.  
+<p>
+If you'd like to enter a new bug, you can do so at <A HREF=http://bugzilla.remotesensing.org/enter_bug.cgi?product=libtiff>http://bugzilla.remotesensing.org/enter_bug.cgi?product=libtiff</A>.  
+<P>
+
+Of course, reporting bugs is no substitute for discussion.  A mailing
+list for users of this software is located at olympiakos.com If you
+want to join this mailing list or have a list-related request such as
+getting your name removed from it, send a request to
+
 <UL>
 <A HREF="mailto:tiff-request@olympiakos.com">tiff-request@olympiakos.com</A>
 </UL>
@@ -30,7 +39,7 @@ in the body of your message.  The line <TT>help</TT> will return a list of
 the commands understood by the mailing list management software.
 
 <P>
-Submissions (including bug reports) should be directed to:
+Submissions should be directed to:
 <UL>
 <A HREF="mailto:tiff@olympiakos.com">tiff@olympiakos.com</A>
 </UL>
@@ -41,6 +50,6 @@ version you have and what system you are running on.
 
 <HR>
 
-Last updated: $Date: 1999-08-13 19:30:57 $
+Last updated: $Date: 2000-07-13 14:58:16 $
 </BODY>
 </HTML>
