@@ -75,7 +75,7 @@ The following sections are included in this documentation:
 <LI><A HREF="contrib.html">Contributed software</A>
 <LI><A HREF="document.html">TIFF documentation</A>
 <LI><A HREF="build.html">Building the software distribution</A>
-<LI><A HREF="bugs.html">Bugs and the TIFF mailing list</A>
+<LI><A HREF="bugs.html">Bugs, Bugzilla, and the TIFF mailing list</A>
 <LI><A HREF="images.html">Test images</A>
 <LI><A HREF="misc.html">Acknowledgements and copyright issues</A>
 <LI><A HREF="man/index.html">Man Pages</A> 
@@ -84,7 +84,7 @@ The following sections are included in this documentation:
 <P>
 <HR>
 <em> 
-$Id: index.html,v 1.27 2000-03-29 04:50:47 mwelles Exp $
+$Id: index.html,v 1.28 2000-07-13 14:58:16 mwelles Exp $
 </em> 
 
 </BODY>
